--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,3 +1,16 @@
-h1 {
+
+  h1 {
+    color: black;
     text-align: center;
-}
+  }
+  
+  p {
+    font-family: verdana;
+    font-size: 25px;
+  }
+  .form-css {
+    display: flex;
+    padding: 50px;
+    margin: 25px;
+    border: 1px solid blue;
+  }
